# vsixHarvester

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.ja.md  README.md  extensions.json  test.json  vsix_harvester_GitHub.copilot-chat.json  vsix_harvester_GitHub.copilot.json
.github/: FUNDING.yml
.github/workflows/: build.yaml  multiarch-docker.yaml
src/: architecture.rs  args.rs  config.rs  error.rs  extension.rs  main.rs  marketplace.rs  tests.rs  types.rs
