[package]
name = "vsixHarvester"
version = "0.1.1"
edition = "2021"
authors = ["bamboogeneral@shortarrow.jp"]
description = "A CLI tool to download VSCode extensions from extensions.json"
license = "MIT"
repository = "https://github.com/ShortArrow/vsixHarvester"
homepage = "https://github.com/ShortArrow/vsixHarvester"
documentation = "https://github.com/ShortArrow/vsixHarvester"
readme = "README.md"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }

