[package]
name = "vsixHarvester"
version = "0.2.3"
edition = "2021"
authors = ["bamboogeneral@shortarrow.jp","Ronan Le Meillat"]
description = "A CLI tool to download VSCode extensions from extensions.json"
license = "MIT"
repository = "https://github.com/sctg-development/vsixHarvester"
homepage = "https://github.com/sctg-development/vsixHarvester"
documentation = "https://github.com/sctg-development/vsixHarvester"
readme = "README.md"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.2"


